--- a/green_house_JavaServer/.classpath
+++ b/green_house_JavaServer/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/orazi/Desktop/Filippo/uni/IoT/progetto_3/smart_green_house/green_house_JavaServer/lib/jssc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
