--- a/green_house_JavaServer/.classpath
+++ b/green_house_JavaServer/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="/java/jSSC-2.8.0-Release/jssc.jar"/>
 	<classpathentry kind="lib" path="lib/vertx-web-3.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/vertx-web-client-3.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/jssc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
