--- a/green_house_JavaServer/.classpath
+++ b/green_house_JavaServer/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/vertx-web-3.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/vertx-web-client-3.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/jssc.jar"/>
+	<classpathentry kind="lib" path="lib/netty-all-4.1.31.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
